--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.13.4",
     "firebase": "^12.8.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
